@@ -1,3 +1,7 @@
+2000-06-28  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Fullscreen-toggle and scaling work together (tested on X).
+
 2000-06-27  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Death and resurrection.
